--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,20 @@
 [package]
-name = "malformed"
+name = "lost-in-memory"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "glib"
+path = "./src/lib.rs"
+
 [dependencies]
+bevy = { version = "0.13.2", features = ["dynamic_linking"] }
+bevy_egui = "0.27"
+bevy_asset_loader = "0.20.2"
+bevy-inspector-egui = "0.24.0"
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
