--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ path = "./src/lib.rs"
 [dependencies]
 bevy = { version = "0.13.2", features = ["dynamic_linking"] }
 bevy_egui = "0.27"
-bevy_asset_loader = "0.20.2"
+bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
 bevy-inspector-egui = "0.24.0"
 
 [profile.dev]
