--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bevy = { version = "0.13.2", features = ["dynamic_linking"] }
 bevy_egui = "0.27"
 bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
 bevy-inspector-egui = "0.24.0"
+bevy_rapier2d = "0.26.0"
 
 [profile.dev]
 opt-level = 1
