--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
 bevy-inspector-egui = "0.24.0"
 bevy_rapier2d = { version = "0.26.0"  }
 bevy_tweening = "0.10"
+bevy_kira_audio = "0.19.0"
 rand = "0.8.5"
 
 [profile.dev]
