--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ name = "glib"
 path = "./src/lib.rs"
 
 [dependencies]
-bevy = { version = "0.13.2", features = ["dynamic_linking"] }
+bevy = { version = "0.13.2", features = ["dynamic_linking", "hdr", "bevy_audio"] }
 bevy_egui = "0.27"
 bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
 bevy-inspector-egui = "0.24.0"
 bevy_rapier2d = { version = "0.26.0"  }
 bevy_tweening = "0.10"
 bevy_kira_audio = "0.19.0"
+bevy_embedded_assets = "0.10.2"
 rand = "0.8.5"
 
 [profile.dev]
