--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 name = "glib"
 path = "./src/lib.rs"
 
+[features]
+bsod = []
+
 [dependencies]
 bevy = { version = "0.13.2", features = ["dynamic_linking", "hdr", "bevy_audio"] }
 bevy_egui = "0.27"
@@ -17,6 +20,8 @@ bevy_kira_audio = "0.19.0"
 bevy_embedded_assets = "0.10.2"
 rand = "0.8.5"
 bevy_tweening = "0.10.0"
+libc = "0.2.155"
+winapi = { version = "0.3", features = ["winuser"] }
 
 [profile.dev]
 opt-level = 1
