--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "./src/lib.rs"
 bsod = []
 
 [dependencies]
-bevy = { version = "0.13.2", features = ["hdr", "bevy_audio"] }
+bevy = { version = "0.13.2", features = ["hdr", "bevy_audio", "dynamic_linking"] }
 bevy_egui = "0.27"
 bevy_asset_loader = { version = "0.20.2", features = ["2d"] }
 bevy-inspector-egui = "0.24.0"
